tests/ui/typeck/receive_a.stderr
error: receive function already declared
  --> ROOT/tests/ui/typeck/receive_a.sol:LL:CC
   |
LL |     receive() external payable {}
   |     ----------------------------- previous declaration here
LL |     receive() external payable {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

